--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <button class="btn btn-default button decodeButton">Decode</button>
          </div>
          <div class="col-md-3">
-            <textarea class="outputBox decodeOutput">Receive decoded message here.</textarea>
+            <div class="outputBox">
+               <p class="decodeOutput">Receive decoded message here.</p>
+            </div>
          </div>
       </div>
    </div>
