--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
    <div class="container">
       <h1>Morse Coder</h1>
       <br>
+      <div class="row rules">
+         <div class="col-md-12">
+            <p><h4><u>Codable Characters</u></h4><p>
+            <p><b>alphabet:</b><span>abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</span></p>
+            <p><b>numeral:</b><span>0123456789</span></p>
+            <p><b>symbol:</b><span>, ; : &amp; + ? ! ( ) '  " / @ = $ _ - .</span></p>
+            <p><i>non-codable characters appear as "#"</i></p>
+         </div>
+      </div>
+      <br>
       <div class="row">
          <div class="col-md-3">
             <textarea class="inputBox encodeInput" placeholder="Input message to encode"></textarea>
